--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/belvo_poc
+    url: ${DB_URL}
     username: postgres
     password: ${BELVO_DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
